# blank-cpp-api

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  NOTICE  README.md  heroku.yml  packager
src/: DBMigrationList.cpp  DBMigrationList.hpp  InitWebService.cpp  InitWebService.hpp  RegisterControllers.cpp  RegisterControllers.hpp  SeedDB.cpp  SeedDB.hpp  main.cpp  stdafx.hpp
src/Authorization/: APISession.hpp  ApiAccessID.cpp  ApiAccessID.hpp
src/Database/: DBMigrate.cpp
src/JSON/: StructParser.cpp  StructParser.hpp  StructParserMacros.hpp
src/WebControllers/: CWelcomeController.cpp  CWelcomeController.hpp
src/WebInterface/: CController.cpp  CController.hpp  CPistacheEndpoint.cpp  CPistacheEndpoint.hpp
src/WebMiddlewares/: AuthMiddleware.cpp  AuthMiddleware.hpp
src/WebRequest/: CurlRAII.cpp  CurlRAII.hpp  PocoRequest.cpp  PocoRequest.hpp
src/autogen/: jobslist.hpp
src/config/: Instances.cpp  Instances.hpp
src/jobs/: HelloWorldHerokuJob.cpp  HelloWorldHerokuJob.hpp
src/migrations/: 2019_12_14_000001_create_personal_access_tokens_table.hpp  2021_08_18_220325_create_log_authentications_table.hpp  CreateLogAuthentication.cpp  CreatePersonalAccessTokens.cpp
src/models/: LogAuthentication.cpp  LogAuthentication.hpp  PersonalAccessTokens.cpp  PersonalAccessTokens.hpp
src/routes/: api.cpp  api.hpp
src/utils/: CConfig.cpp  CConfig.hpp  CLog.cpp  CLog.hpp  DocAPI.hpp  InputValidators.hpp  Validator.cpp  Validator.hpp
tests/: CMakeLists.txt  test_ApiAccessID.cpp  test_apiroutes.cpp  test_cconfig.cpp  test_inputvalidators.cpp  test_nothing.cpp
